# fifteen_puzzle

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  ColorfulText.cpp  ColorfulText.h  FifteenPuzzle.cpp  FifteenPuzzle.h  GameScreen.cpp  GameScreen.h  GameState.h  MainMenu.cpp  MainMenu.h  README.md  Resource.aps  Resource.rc  ResourceManager.cpp  ResourceManager.h  RulesScreen.cpp  RulesScreen.h  Screen.cpp  Screen.h  Transition.cpp  Transition.h  fifteen_puzzle.cpp  fifteen_puzzle.rc  fifteen_puzzle.sln  resource.h  меню пятнашки.APS  меню пятнашки.vcxproj  меню пятнашки.vcxproj.filters
.github/workflows/: build.yml
